src/styles.css
*, *::before, *::after {
  box-sizing: border-box;
}

* img {
  user-select: none;
  pointer-events: none;
}

h1, h2, h3 {
  filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.8));
  user-select: none;
}

input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
  display: none;
}

html {
  background-color: #0f0f0f;
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: #f6f6f6;
  scroll-behavior: smooth;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

::-webkit-scrollbar {
  width: 6px;
  background-color: transparent;
  border-radius: 10px;
}
:hover::-webkit-scrollbar {
  background-color: transparent;
}
::-webkit-scrollbar-track {
  margin: 4px 0;
}
::-webkit-scrollbar-thumb {
  background-color: transparent;
  border-radius: 8px;
}
:hover::-webkit-scrollbar-thumb {
  background-color: #555;
}
::-webkit-scrollbar-thumb:hover {
  background-color: #888;
  cursor: pointer;
}

.primary-button {
  border: none;
  outline: 1px solid transparent;
  border-radius: 6px;
  background-color: #222;
  color: #f6f6f6;
  padding: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
  transition: transform 0.2s, box-shadow 0.2s;
  user-select: none;
}
.primary-button:hover {
  cursor: pointer;
  transform: translateY(-2px);
  background-color: #333;
  outline-color: rgba(255, 70, 70, 1);
  box-shadow: 0 8px 16px rgba(0, 0, 0, 1);
}

.transparent-button {
  margin: 0;
  padding: 0;
  background-color: transparent;
  border: none;
}
.transparent-button:hover {
  cursor: pointer;
}

.transparent-button-highlight {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: 0;
  background-color: transparent;
  border: none;
  border-radius: 50%;
}
.transparent-button-highlight:hover {
  cursor: pointer;
  background-color: rgba(200, 200, 200, 0.2);
}

.horizontal-flex-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

.vertical-flex-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.primary-input {
  width: 100%;
  height: 100%;
  border: none;
  outline: 2px solid rgb(180, 180, 180);
  background-color: transparent;
  color: black;
  font-size: 18px;
  border-radius: 8px;
  padding: 4px 6px;
}
.primary-input::-ms-reveal {
  display: none;
}

.primary-input:focus, .form-primary-button:focus, .form-button:focus, .primary-button:focus {
  outline-color: rgba(255, 70, 70, 1);
}

.img-small {
  height: 16px;
  width: 16px;
}

.img-medium {
  height: 24px;
  width: 24px;
}

.img-large {
  height: 32px;
  width: 32px;
}

.image-wrapper {
  display: flex;
  flex: 1;
  justify-content: center;
  align-items: center;
}

/* 
***************************
AUTHENTICATION VIEW & FORMS
***************************
*/

.form-outer-container {
  display: flex;
  flex-direction: column;
  max-width: 800px;
  width: 100%;
  background-color: rgb(200, 200, 200);
  border-radius: 12px;
  padding: 40px;
  color: black;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.8);
}

.form-bg {
  display: flex;
  flex-direction: column;
  flex: 1 1 0;
  gap: 24px;
  border-radius: 8px;
  padding: 32px;
}

.form-input-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 52px;
  gap: 10px;
  padding-top: 6px;
}

.form-question-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  margin-top: auto;
  padding: 0;
  gap: 10px;
}

.form-input-spacer {
  min-width: 42px;
  width: 42px;
  min-height: 42px;
  height: 42px;
  pointer-events: none;
}

.form-p {
  font-weight: 600;
  user-select: none;
  margin: 0;
}

.form-button {
  outline: 1px solid transparent;
  color: rgba(255, 70, 70, 1);
  font-weight: 600;
}

.form-input-container .form-button {
  min-width: 42px;
  width: 42px;
  min-height: 42px;
  height: 42px;
  padding: 6px;
  border-radius: 50%;
}

.form-input-container .form-button:hover {
  background-color: rgba(165, 165, 165, 0.9);
}

.form-button img {
  height: 30px;
  width: 30px;
  pointer-events: none;
}

.form-primary-button {
  display: flex;
  align-self: flex-end;
  align-items: center;
  justify-content: space-between;
  max-width: 150px;
  width: 100%;
  max-height: 42px;
  height: 100%;
  margin-top: auto;
  padding: 10px 8px;
  text-align: left;
  font-weight: 600;
}
.form-primary-button:hover {
  background-color: rgba(255, 70, 70, 1);
}

.form-primary-button img {
  max-width: 18px;
  max-height: 18px;
  transform: rotateZ(-90deg);
  filter: brightness(0) invert(0.9);
  transition: transform 0.2s;
}
.form-primary-button img.moveRight {
  transform: translateX(4px) rotateZ(-90deg);
}

/* 
***************************
TRANSACTIONS TABLE
***************************
*/

.table-grid-layout {
  display: grid;
  grid-template-columns: 24px minmax(50px, 0.5fr) minmax(100px, 120px) minmax(210px, 1.2fr) 1.5fr 2fr 100px;
}

.table-row {
  height: 56px;
  justify-content: unset;
  padding: 6px 10px;
  border-radius: 8px;
  transition: transform 0.2s;
}
.table-row:hover {
  cursor: pointer;
  transform: translateY(-2px);
  background-color: #222;
  outline: 1px solid rgba(255, 70, 70, 1);
}

.table-header {
  padding: 0 10px;
  text-align: left;
  font-weight: bold;
  user-select: none;
  border-left: 2px solid #555;
  color: #f6f6f6;
}

.table-cell, .table-cell-edit {
  font-size: 15px;
  padding: 0 10px 0 12px;
}
.table-cell {
  pointer-events: none;
}
.table-cell-edit {
  height: 100%;
}
.table-cell span {
  padding: 6px 10px;
  border-radius: 6px;
  user-select: none;
}

.table-cell-edit select:hover {
  cursor: pointer;
}

.table-cell-edit select option {
  background-color: #0f0f0f;
  color: #c34646;
}
.table-cell-edit select option:nth-last-child(-n + 3) {
  color: #73c873;
}

.table-checkbox {
  width: 14px;
  height: 14px;
  margin: 0;
  transition: transform 100ms;
}
.table-checkbox:hover {
  cursor: pointer;
  transform: scale(1.2);
}

/* 
***************************
ANIMATIONS AND CLASSES
***************************
*/

.opacity-breathing {
  animation: breathing 2s infinite;
}

@keyframes breathing {
    0% { opacity: 1; }
    50% { opacity: 0.4; }
    100% { opacity: 1; }
  }

